added picture path

--- a/part1.Html
+++ b/part1.Html
@@ -118,7 +118,11 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img
+          srcset="Bhim.github.io\firefox_logo-only_RGB.png-120.png"
+          sizes="(max-width: 500px) 120px, 400px"
+          src="firefoxlogo.png"
+          alt="logo">
         </a>
         <a href="https://www.mozilla.org/">
           <img>
