--- a/part1.Html
+++ b/part1.Html
@@ -99,13 +99,20 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <!-- insert <img> element, link to the small
+      <img src="firefox_logo-only_RGB.png-120.png" alt="firefox logo " >
+
+      <!-- insert <> element, link to the small
           version of the Firefox logo -->
 
     </header>
 
     <main>
       <article>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ojcNcvb1olg?si=3Jw2t1D5McpwnV-S" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+      </iframe>
         <!-- insert iframe from youtube -->
 
         <h2>Rocking the free web</h2>
@@ -118,26 +125,25 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img
-          srcset="Bhim.github.io\firefox_logo-only_RGB.png-120.png"
-          sizes="(max-width: 500px) 120px, 400px"
-          src="firefoxlogo.png"
-          alt="logo">
+          <img src="firefox_logo-only_RGB.png-400.png" alt="firefox logo" srcset="firefox_logo-only_RGB.png-400.png, firefox_logo-only_RGB.png-120.png">
         </a>
         <a href="https://www.mozilla.org/">
-          <img>
+          <img src="mozilla-dinosaur-head.png-400.png" alt="mozilla-dinosaur-head" srcset="mozilla-dinosaur-head.png-400.png, mozilla-dinosaur-head.png-120.png"
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="firefox-addons.jpg-400.jpg" alt="firefox addons" srcset="firefox-addons.jpg-400.jpg, firefox-addons.jpg-120.jpg"
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="mdn.svg" alt="devloper mozilla">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
-        <!-- insert picture element -->
+        <picture>
+          <source media="(max-width: 600px)" srcset="red-panda.jpg-600.jpg">
+          <img src="red-panda.jpg-1200.jpg" alt="a red panda">
+      </picture>
       </div>
 
     </main>
