--- a/part2.html
+++ b/part2.html
@@ -15,7 +15,7 @@
       </caption>
       <thead>
         <tr>
-          <th></th>
+          <th colspan="2"></th>
           <th>Name</th>
           <th>Mass (10<sup>24</sup>kg)</th>
           <th>Diameter (km)</th>
@@ -30,7 +30,7 @@
       </thead>
       <tbody>
         <tr>
-          <th rowspan="4">Terrestrial planets</th>
+          <th rowspan="4" colspan="2">Terrestrial planets</th>
           <th>Mercury</th>
           <td>0.330</td>
           <td>4,879</td>
@@ -146,3 +146,4 @@
     </table>
   </body>
 </html>
+
