--- a/Assignment3/Part1/biog-download.html
+++ b/Assignment3/Part1/biog-download.html
@@ -2,7 +2,7 @@
 	Name: Bhim Khadka
 	File: Index.html
 	Date:20 June , 2024
-	
+	Styling a biography page
 	-->
 
 
@@ -51,7 +51,7 @@
   </head>
 
   <body>
-    <h1>Jane Doe</h1>
+    <h1>Bhim Khadka</h1>
     <div class="job-title">Web Developer</div>
     <p>
       Far far away, behind the word mountains, far from the countries Vokalia
@@ -66,7 +66,7 @@
       parts of sentences fly into your mouth.
     </p>
 
-    <h2>Contact information</h2>
+    <h2><i>Contact information</i></h2>
     <ul>
       <li>
         Email:
