--- a/Assignment3/Part1/biog-download.html
+++ b/Assignment3/Part1/biog-download.html
@@ -46,6 +46,13 @@
 
       a:hover {
         text-decoration: none;
+        color: green;
+      }
+      ul.contact-info {
+        background-color: #eeeeee;
+        border: 5px solid purple;
+        padding: 15px;
+        list-style-type: none; 
       }
     </style>
   </head>
@@ -67,7 +74,7 @@
     </p>
 
     <h2><i>Contact information</i></h2>
-    <ul>
+    <ul class="contact-info" >
       <li>
         Email:
         <a href="mailto:jane@example.com">jane@example.com</a>
