--- a/Assignment3/part 2/index.html
+++ b/Assignment3/part 2/index.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html>
+
+<!--
+	Name: Bhim Khadka
+	File:Index.html
+	Date: 20 jun 2024
+	Making Cool box
+	-->
+
+  <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
