--- a/Assignment3/part 2/index.html
+++ b/Assignment3/part 2/index.html
@@ -6,15 +6,19 @@
 	Making Cool box
 	-->
 
+
+
   <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Cool box</title>
+    <link rel="stylesheet" href="style.css">
+
     
   </head>
   <body>
-      <div>This is a cool box</div>
+      <div class="cool-box">This is a cool box</div>
   </body>
 </html>
