--- a/Assignment3/Part 3/index.html
+++ b/Assignment3/Part 3/index.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html>
+
+<!--
+	Name: Bhim Khadka
+	File: index.html
+	Date: 20 June 2024
+	Fundamental Layout Comprehension
+	-->
+  <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
