Added all the images

--- a/Assignment3/Part 3/index.html
+++ b/Assignment3/Part 3/index.html
@@ -3,7 +3,7 @@
 	Name: Bhim Khadka
 	File: index.html
 	Date: 20 June 2024
-	Fundamental Layout Comprehension
+	Typesetting a community school homepage
 	-->
   <!DOCTYPE html>
 <html lang="en-US">
