--- a/Assignment3/Part 4/index.html
+++ b/Assignment3/Part 4/index.html
@@ -1,4 +1,11 @@
-<!DOCTYPE html>
+
+<!--
+	Name: Bhim Khadka
+	File: index.html
+	Date: 20 June 2024
+	Fundamental Layout Comprehension
+	-->
+  <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
@@ -38,7 +45,7 @@
       <h1>
         An Exciting Blog Post
       </h1>
-      <img src="images/balloon-sq6.jpg" alt="placeholder" class="feature">
+      <img src="C:\Users\Bhim\Documents\GitHub\Bhim.github.io\Assignment3\Part 4\balloon-sq6.jpg" alt="placeholder" class="feature">
       <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
         azuki bean garlic.</p>
 
@@ -66,19 +73,19 @@
       </h2>
       <ul class="photos">
         <li>
-          <img src="images/balloon-sq1.jpg" alt="placeholder">
+          <img src="C:\Users\Bhim\Documents\GitHub\Bhim.github.io\Assignment3\Part 4\balloon-sq1.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq2.jpg" alt="placeholder">
+          <img src="C:\Users\Bhim\Documents\GitHub\Bhim.github.io\Assignment3\Part 4\balloon-sq2.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq3.jpg" alt="placeholder">
+          <img src="C:\Users\Bhim\Documents\GitHub\Bhim.github.io\Assignment3\Part 4\balloon-sq3.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq4.jpg" alt="placeholder">
+          <img src="C:\Users\Bhim\Documents\GitHub\Bhim.github.io\Assignment3\Part 4\balloon-sq4.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq5.jpg" alt="placeholder">
+          <img src="C:\Users\Bhim\Documents\GitHub\Bhim.github.io\Assignment3\Part 4\balloon-sq5.jpg" alt="placeholder">
         </li>
       </ul>
 
