--- a/Assignment3/Part 4/index.html
+++ b/Assignment3/Part 4/index.html
@@ -85,7 +85,7 @@
           <img src="C:\Users\Bhim\Documents\GitHub\Bhim.github.io\Assignment3\Part 4\balloon-sq4.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="C:\Users\Bhim\Documents\GitHub\Bhim.github.io\Assignment3\Part 4\balloon-sq5.jpg" alt="placeholder">
+          <img src="" alt="placeholder">
         </li>
       </ul>
 
