--- a/Assignment 4/Part 1/index.html
+++ b/Assignment 4/Part 1/index.html
@@ -1,4 +1,17 @@
-<!DOCTYPE html>
+
+<!--
+
+         Name: Bhim Khadka
+
+         File: index.html
+
+         Date: 4 August 2024
+
+         Assignment 4 part 1
+         
+
+-->
+         <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
